--- a/exercises/forms.html
+++ b/exercises/forms.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forms</title>
+    <title>Form</title>
 </head>
+
 <body>
-    
+    <!-- <h4>Personal Information</h4>
+    <form action="/example_action.html">
+        <label for="fName"> First Name: </label>
+        <input type="text" id="fName" name="fName"><br><br>
+        <label for="fLastName">Last Name: </label>
+        <input type="text" id="fLastName" name="fLastName"><br><br>
+        <label for="fage">Age: </label>
+        <input type="number" id="fage" name="fage"><br><br>
+ <label for="fbirthday">Birthday: </label>
+        <input type="date" id="fbirthday" name="fbirthday"><br><br>
+        <label for="fgender">Gender: </label>
+        <select name="fgender" id="fgender">
+            <option value="Female">Female</option>
+            <option value="Male">Male</option>
+        </select>
+        <input type="submit" value="Save">
+    </form> -->
+
+    <form method="Get">
+        <select name="state" >
+        <option value="AR">California</option>
+             <option value="NY">New York</option>
+        </select>
+        <input type="submit">
+    </form>
 </body>
+
 </html>
